--- a/public/admin_login_registrasi/css/style.css
+++ b/public/admin_login_registrasi/css/style.css
@@ -1,6 +1,23 @@
 body {
     font-family: "Roboto", sans-serif;
-    background-color: #efefef;
+    background: linear-gradient(
+            to bottom,
+            #d5dee7 0%,
+            #e8ebf2 50%,
+            #e2e7ed 100%
+        ),
+        linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.02) 50%,
+            rgba(255, 255, 255, 0.02) 61%,
+            rgba(0, 0, 0, 0.02) 73%
+        ),
+        linear-gradient(
+            33deg,
+            rgba(255, 255, 255, 0.2) 0%,
+            rgba(0, 0, 0, 0.2) 100%
+        );
+    background-blend-mode: normal, color-burn;
     line-height: 1.9;
     color: #8c8c8c;
     position: relative;
@@ -111,16 +128,30 @@ a:hover {
     text-transform: uppercase;
     border-radius: 30px !important;
 }
-.btn.btn-primary {
-    border-radius: 30px;
-    background: #4d80e4;
-    color: #fff;
-    -webkit-box-shadow: 0 15px 30px 0 rgba(77, 128, 228, 0.2);
-    box-shadow: 0 15px 30px 0 rgba(77, 128, 228, 0.2);
+
+.btn-grad {
+    background-image: linear-gradient(
+        to right,
+        #457fca 0%,
+        #5691c8 51%,
+        #457fca 100%
+    );
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
 }
-.btn:hover {
+
+.btn-grad:hover {
+    background-position: right center; /* change the direction of the change here */
     color: #fff;
+    text-decoration: none;
 }
+
 .btn:active,
 .btn:focus {
     outline: none;
